syntax = "proto3";

package taskevents.v1;

import "task/v1/task.proto";

enum TaskCUDEventType {
    TASK_CUD_EVENT_TYPE_UNSPECIFIED = 0;
    TASK_CUD_EVENT_TYPE_CREATED = 1;
    TASK_CUD_EVENT_TYPE_ASSIGNED = 2;
    TASK_CUD_EVENT_TYPE_COMPLETED = 3;
}

message TaskEvent {
    TaskCUDEventType event_type = 1;
    task.v1.TaskWithID task = 2;
    int64 timestamp = 3;
}
