syntax = "proto3";

package task.v1;

enum TaskStatus {
    TASK_STATUS_UNSPECIFIED = 0;
    TASK_STATUS_OPENED = 1;
    TASK_STATUS_COMPLETED = 2;
}

message Task {
    string description = 1;
    string assigned_user = 2;
    TaskStatus status = 3;
}

message CreateTaskResponse {}

message TaskWithID {
    string id = 1; // uuid
    Task task = 2;
}
